# Uva---Hakuto

./: .gitignore  100 - 3n + 1 problem.cpp  10071 - Back to High School Physics.c  10114 - Loansome Car Buyer.cpp  10141 - Request for Proposal.cpp  10324 - Zeros and Ones (Optimal).c  10324 - Zeros and Ones.c  10424 - Love Calculator.c  10919 - Prerequisites.cpp  10963 - The Swallowing Ground.c  11172 - Relational Operator.c  11547 - Automatic Answer.java  11559 - Event Planning.cpp  11572 - Unique Snowflakes.cpp  11679 - Sub-prime.cpp  11764 - Jumping Mario.cpp  11799 - Horror Dash.c  119 - Greedy Gift Givers.cpp  11942 - Lumberjack Sequencing.cpp  12015 - Google is Feeling Lucky.cpp  12403 - Save Setu.java  12468 - Zapping.c  12554 - A Special Happy Birthday Song!!!.cpp  12577 - Hajj-e-Akbar.java  573 - The Snail.c  661 - Blowing Fuses.c  CMakeLists.txt  README.md
100 - 3n + 1 problem/: main.cpp
10055/: 10055 - Hashmat the Brave Warrior.c
10114/: 10114 - Loansome Car Buyer.cpp
10141/: 10141 - Request for Proposal.cpp
10145 - Lock Manager/: in.txt  main.py  out.txt
10324 - Zeros and Ones/: main (Optimal).c  main.c
10424/: 10424 - Love Calculator.c
10919/: 10919 - Prerequisites.cpp
10963 - The Swallowing Ground/: main.c
11078 - Open Credit System/: Main.java  in.txt
11547 - Automatic Answer/: main.java
11559/: 11559 - Event Planning.cpp
11572/: 11572 - Unique Snowflakes.cpp
11679 - Sub-prime/: main.cpp
11687 - Digits/: Main.java  in.txt  main.py
11764/: 11764 - Jumping Mario.cpp
11799/: 11799 - Horror Dash.c
12157 - Tariff Plan/: main.c
(+38 files in other folders)
